syntax = "proto2";
package iam.pb;

// MessageType ...
enum MessageType {
    MessageType_Initialize = 0 ;
    MessageType_MessageCSR = 1;
    MessageType_MessageCOT = 2 ;  
}

// Request CSR , owner send to storage  
message MessageCSR {
	required bytes o_id = 1;	// owner id
	required bytes cid = 2;        // cid
}

// CSR Response COT , storage response to owner and signed by storage  
message MessageCOT {
    required bytes s_id = 1 ;
    required bytes o_id = 2 ;
    required bytes cid = 3 ;
}

// CRT Request Token , request send request to owner ask authorization  
message MessageCRT {
    required bytes r_id = 1 ;
    required bytes o_id = 2 ;
    required bytes cid = 3 ;

}

// CRT Response CAT , owner response to requester   
message MessageCAT {
    required bytes o_id =1 ;
    required bytes r_id =2 ;
    required bytes cid =3 ;
    required bytes cot =4;
}

// 
message MessageRT {
    required bytes r_id =1 ;
    required bytes cid =2 ;
    required bytes cat =3;
}


// SignedMessage ... 
message SignedMessage {
    required string id = 1 ;
	required bytes peer_id = 2;
	required bytes message = 3;
    required bytes signature = 4 ;
    required bytes public_key = 5 ;
}

